# neural_nets_training

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
neural_nets_training/: dataset_management.py  model_training.py  models.py  params.py  privacy.py  resnet.py  unbalanced_datasets.py  utils.py
notebooks/: demos_and_experiments.ipynb
standard/: build.sh  build_whls.sh  entrypoint.sh  install_dependencies.sh  run.sh  test.sh
