[tool.poetry]
name = "neural_nets_training"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.7.5, <3.10"
toolz = "^0.11.2"
torch = "^1.10.0"
opacus = "^1.0.1"
matplotlib = "3.1.3"
tensorboard = "^2.7.0"
torchvision = "^0.11.1"
PyYAML = "^6.0"
click = "^8.0.3"


[tool.poetry.dev-dependencies]

syft = "^0.6.0" # needed for PATE only

ipykernel = "^6.6.0"
bpython = "^0.21"
yapf = "^0.31.0"
pylint = "^2.12.2"
#jupyterlab = "^3.2.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
